force-app/main/default/objects/SeriePagamentos__c/SeriePagamentos__c.object-meta.xml
<CustomObject>
    <label>Série de Pagamentos</label>
    <nameField>
        <label>Nome de Série de Pagamentos</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Series de Pagamentos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>