force-app/main/default/objects/SeriePagamentos__c/fields/AposHabiteSe__c.field-meta.xml
<CustomField>
    <fullName>AposHabiteSe__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Após a data de entrega do empreendimento</inlineHelpText>
    <label>Após Habite-se</label>
    <type>Checkbox</type>
</CustomField>