force-app/main/default/objects/SeriePagamentos__c/fields/Cotacao__c.field-meta.xml
<CustomField>
    <fullName>Cotacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cotação</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Series de Pagamentos</relationshipLabel>
    <relationshipName>Series_de_Pagamentos</relationshipName>
    <type>Lookup</type>
</CustomField>