force-app/main/default/objects/SeriePagamentos__c/fields/DiaVencimentoParcela__c.field-meta.xml
<CustomField>
    <fullName>DiaVencimentoParcela__c</fullName>
    <label>Dia de Vencimento da Parcela</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>