force-app/main/default/objects/SeriePagamentos__c/fields/InicioPagamento__c.field-meta.xml
<CustomField>
    <fullName>InicioPagamento__c</fullName>
    <inlineHelpText>Numeral, em meses. Se for &quot;0&quot;, significa hoje. Se for &quot;40&quot;, significa &quot;daqui a 40 meses&quot; a partir de hoje</inlineHelpText>
    <label>Início de Pagamento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>