force-app/main/default/objects/SeriePagamentos__c/fields/OrigemSeriePagamento__c.field-meta.xml
<CustomField>
    <fullName>OrigemSeriePagamento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origem Série de Pagamento</label>
    <referenceTo>TabelaVendas__c</referenceTo>
    <relationshipLabel>Series de Pagamentos (Origem Série de Pagamento)</relationshipLabel>
    <relationshipName>Series_de_Pagamentos</relationshipName>
    <type>Lookup</type>
</CustomField>