force-app/main/default/objects/SeriePagamentos__c/fields/Periodicidade__c.field-meta.xml
<CustomField>
    <fullName>Periodicidade__c</fullName>
    <label>Periodicidade da Parcela</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Periodicidade</valueSetName>
    </valueSet>
</CustomField>