force-app/main/default/objects/SeriePagamentos__c/fields/QuantidadeParcelas__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeParcelas__c</fullName>
    <label>Quantidade de Parcelas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>