force-app/main/default/objects/SeriePagamentos__c/fields/Restante__c.field-meta.xml
<CustomField>
    <fullName>Restante__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Marca o item que completará 100% do valor da venda.</inlineHelpText>
    <label>Restante</label>
    <type>Checkbox</type>
</CustomField>