force-app/main/default/objects/SeriePagamentos__c/fields/ValorTotalNominal__c.field-meta.xml
<CustomField>
    <fullName>ValorTotalNominal__c</fullName>
    <label>Valor Total Nominal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>