force-app/main/default/objects/SeriePagamentos__c/recordTypes/SerieCotacao.recordType-meta.xml
<RecordType>
    <fullName>SerieCotacao</fullName>
    <active>true</active>
    <label>Série Cotação</label>
</RecordType>