force-app/main/default/objects/SeriePagamentos__c/recordTypes/SerieTabela.recordType-meta.xml
<RecordType>
    <fullName>SerieTabela</fullName>
    <active>true</active>
    <label>Série Tabela</label>
</RecordType>